# fanctrl

./: CMakeLists.txt  README.md  fanctrl.cpp  fanctrl.service.in
